...
            "state" : "translated",
            "value" : "100 tín dụng chào mừng miễn phí"
          }
        }
      }
    },
    "377" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "377"
          }
...
            "state" : "translated",
            "value" : "Về tín dụng"
          }
        }
      }
    },
    "Account" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الحساب"
          }
...
            "state" : "translated",
            "value" : "Hình ảnh AI"
          }
        }
      }
    },
    "AI Photo" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "صورة بالذكاء الاصطناعي"
          }
...
            "state" : "translated",
            "value" : "Ảnh AI"
          }
        }
      }
    },
    "AI Video" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "فيديو بالذكاء الاصطناعي"
          }
...
            "state" : "translated",
            "value" : "Thay đổi ảnh"
          }
        }
      }
    },
    "Change profile photo" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تغيير الصورة"
          }
...
            "state" : "translated",
            "value" : "Chọn ảnh chụp nguồn"
          }
        }
      }
    },
    "Choose Template" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "نموذج الاختيار"
          }
...
            "state" : "translated",
            "value" : "Xóa thư"
          }
        }
      }
    },
    "Close bonus offer" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "منحة قريبة"
          }
...
            "state" : "translated",
            "value" : "Đóng cửa hàng tín dụng"
          }
        }
      }
    },
    "Close detail" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "التفاصيل"
          }
...
            "state" : "translated",
            "value" : "Xem thử đóng"
          }
        }
      }
    },
    "Close rewards" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مكافآت قريبة"
          }
...
            "state" : "translated",
            "value" : "Tạo ra nhiều hơn mỗi tuần"
          }
        }
      }
    },
    "Create now" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الخلق الآن"
          }
...
            "state" : "translated",
            "value" : "Kiếm được"
          }
        }
      }
    },
    "Edit generation settings" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit generation settings"
          }
...
            "state" : "translated",
            "value" : "Sửa tên"
          }
        }
      }
    },
    "Edit output settings" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "هاء - أطر نواتج التحرير"
          }
...
            "state" : "translated",
            "value" : "FAQ"
          }
        }
      }
    },
    "Feedback" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "التغذية"
          }
...
            "state" : "translated",
            "value" : "Lịch sử 3 tháng qua"
          }
        }
      }
    },
    "Home" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الرئيسية"
          }
...
            "state" : "translated",
            "value" : "Image(%lld/3)"
          }
        }
      }
    },
    "Image1" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الشكل 1"
          }
...
            "state" : "translated",
            "value" : "Phóng to tạo ra video"
          }
        }
      }
    },
    "Me" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "حسابي"
          }
...
            "state" : "translated",
            "value" : "Túi tín dụng một lần."
          }
        }
      }
    },
    "One-time packs · Never expire" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "لا تنتهي أبداً"
          }
...
            "state" : "translated",
            "value" : "Mở tài khoản"
          }
        }
      }
    },
    "Open daily gift" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "هدية يومية مفتوحة"
          }
...
            "state" : "translated",
            "value" : "Mở thành viên Pro"
          }
        }
      }
    },
    "Open settings" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الأطر المفتوحة"
          }
...
            "state" : "translated",
            "value" : "SINHAL"
          }
        }
      }
    },
    "Output Settings" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "النواتج"
          }
...
            "state" : "translated",
            "value" : "Lưu tạo ra video"
          }
        }
      }
    },
    "Save output settings" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "أطر الإنقاذ للنواتج"
          }
...
            "state" : "translated",
            "value" : "Không còn gì nữa."
          }
        }
      }
    },
    "They expire 2 hours after you claim them." : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تنتهي بعد ساعتين من مطالبتك بها"
          }
...
            "state" : "translated",
            "value" : "Họ hết hạn 2 giờ sau khi anh đòi họ."
          }
        }
      }
    },
    "This action is permanent and cannot be undone." : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "وهذا العمل دائم ولا يمكن أن يُبطل."
          }
...
            "state" : "translated",
            "value" : "Hôm nay"
          }
        }
      }
    },
    "Top Up Credits" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الائتمانات العليا"
          }
...
            "state" : "translated",
            "value" : "Up to %lld videos yearly"
          }
        }
      }
    },
    "Upload Image" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "رفع الصورة"
          }
...
            "state" : "translated",
            "value" : "Thế hệ phim ảnh thất bại"
          }
        }
      }
    },
    "View credits" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ائتمانات فيو"
          }
...
